# smm-asset-api

./: .gitignore  Makefile.am  README.md  configure.ac  fix-ident.sh
.github/workflows/: build.yml  codeql.yml
debian/: changelog  control  copyright  rules
src/: Makefile.am  smm-asset-curl.c  smm-asset-internal.h  smm-asset.c  smm-asset.h  smm-asset.pc.in
